--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                           Lainnya
                           </a>
                           <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Edukasi</a></li>
+                            <li><a class="dropdown-item" href="#">Forum</a></li>
                             <li><a class="dropdown-item" href="#">Budaya</a></li>
                             <li><a class="dropdown-item" href="#">Rekreasi</a></li>
                           </ul>
