--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
-            <img src="img\carousel.jpg" class="card-img-top" alt="...">
+            <img src="img\jalansantai.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Apa Pentingnya Hidup Sehat?</h5>
               <p class="card-text">Seberapa penting sehat dalam menjalani kehidupan, dan apa alasannya?</p>
@@ -252,7 +252,7 @@
               style="text-align: left;">088229057561</a>
           <p style="text-align: left;">Fax : 088229057561</p>
           <p style="text-align: left;">Email :
-            <a href="mailto:dandaaditianugraha@student.amikom.ac.id">dandaaditianugraha@student.amikom.ac.id</a>
+            <a href="mailto:dandaaditianugraha@student.amikom.ac.id">Lanang@github.io</a>
           </p>
           <p style="text-align: left;">Jl. Ring Road Utara, Ngringin, Condongcatur, Kec. Depok, Kab. Sleman Daerah
             Istimewa Yogyakarta, 55281</p>
